--- a/Application/app/src/main/res/drawable/favorites_icon.xml
+++ b/Application/app/src/main/res/drawable/favorites_icon.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="19dp"
-    android:viewportWidth="20"
-    android:viewportHeight="19">
+    android:width="29dp"
+    android:height="27dp"
+    android:viewportWidth="29"
+    android:viewportHeight="27">
   <path
-      android:pathData="M10,18.35L8.55,17.03C3.4,12.36 0,9.27 0,5.5C0,2.41 2.42,0 5.5,0C7.24,0 8.91,0.81 10,2.08C11.09,0.81 12.76,0 14.5,0C17.58,0 20,2.41 20,5.5C20,9.27 16.6,12.36 11.45,17.03L10,18.35Z"
-      android:fillColor="#000000"/>
+      android:pathData="M14.194,24.59C14.194,24.59 1.569,19.654 1.569,8.604C1.569,6.738 2.301,4.949 3.603,3.63C4.905,2.31 6.671,1.569 8.513,1.569C9.629,1.569 10.728,1.842 11.717,2.365C12.707,2.889 13.556,3.647 14.194,4.575C14.832,3.648 15.682,2.89 16.67,2.367C17.66,1.844 18.759,1.57 19.875,1.569C21.716,1.569 23.482,2.31 24.784,3.63C26.086,4.949 26.818,6.738 26.818,8.604C26.818,19.654 14.194,24.59 14.194,24.59Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="3.13922"
+      android:fillColor="#00000000"
+      android:strokeColor="#7056F5"/>
 </vector>
