--- a/Application/app/src/main/res/drawable/home_icon.xml
+++ b/Application/app/src/main/res/drawable/home_icon.xml
@@ -8,11 +8,8 @@
       android:strokeLineJoin="round"
       android:strokeWidth="4"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"/>
+      android:strokeColor="#484C52"/>
   <path
-      android:pathData="M22,26.167H25.333V29.5M22,26.167V29.5H25.333M22,26.167L25.333,29.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="4"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"/>
+      android:pathData="M20,27C20,25.343 21.343,24 23,24H25C26.657,24 28,25.343 28,27V29C28,30.657 26.657,32 25,32H23C21.343,32 20,30.657 20,29V27Z"
+      android:fillColor="#484C52"/>
 </vector>
